# faebot-discord

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  ROADMAP.md  admin_commands.py  backfill_locations.py  capture.py  database.py  faebot.py  faediscord.py  fly.toml  mypy.ini  pyproject.toml  settings_cli.py  start.sh
.githooks/: pre-commit
migrations/: 001_initial_schema.py  002_simplify_schema_and_reactions.py  003_conversants_list_to_dict.py  004_captured_events.py  005_drop_bot_messages.py  006_channel_settings.py  007_environment_meta.py  README.md
tests/: conftest.py  test_admin_commands.py  test_faediscord.py  tests.py
