[tool.poetry]
name = "faebot-discord"
version = "0.2.0"
description = "A version of faebot (general purpose ML chatbot) to run on discord"
authors = ["transfaeries"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
replicate = "^0.21.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.04.0"
black = "^23.1.0"
pylint = "^2.16.2"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
