[tool.poetry]
name = "faebot-discord"
version = "0.1.0"
description = "A version of faebot (general purpose ML chatbot) to run on discord"
authors = ["transfaeries"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.1.1"
replicate = "^0.21.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.04.0"
black = "^23.1.0"
pylint = "^2.16.2"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
aiohttp = "^3.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
